--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -972,6 +972,56 @@ SELECT {
 {english:"summary", spanish:"resumen (m)",englishPhrase:"there's a summary at the end", spanishPhrase:"hay un resumen al final",module:"module 15",type:"words"},
 {english:"stomach", spanish:"estómago (m)",englishPhrase:"she says her stomach hurts", spanishPhrase:"dice que le duele el estómago",module:"module 15",type:"words"},
 {english:"to transport", spanish:"transportar",englishPhrase:"how are they going to tranport all this?", spanishPhrase:"¿cómo van a tranportar todo esto?",module:"module 15",type:"words"},
+{english:"cousin", spanish:"primo/a",englishPhrase:"all my cousins are here", spanishPhrase:"todos mis primos están aquí",module:"module 16",type:"words"},
+{english:"modern", spanish:"moderno/a",englishPhrase:"a modern design", spanishPhrase:"un diseño moderno",module:"module 16",type:"words"},
+{english:"traffic", spanish:"tráfico (m)",englishPhrase:"I can't stand this traffic!", spanishPhrase:"¡no soporto este tráfico!",module:"module 16",type:"words"},
+{english:"neutral", spanish:"neutral",englishPhrase:"I want to stay neutral in this", spanishPhrase:"quiero ser neutral en esto",module:"module 16",type:"words"},
+{english:"vibration", spanish:"vibración (f)",englishPhrase:"the vibration is getting worse", spanishPhrase:"la vibración está empeorando",module:"module 16",type:"words"},
+{english:"comedy", spanish:"comedia (f)",englishPhrase:"a funny comedy", spanishPhrase:"una comedia divertida",module:"module 16",type:"words"},
+{english:"exchange", spanish:"intercambio (m)",englishPhrase:"the offered me an exchange", spanishPhrase:"me ofrecieron un intercambio",module:"module 16",type:"words"},
+{english:"medal", spanish:"medalla (f)",englishPhrase:"the medal of honor", spanishPhrase:"la medalla de honor",module:"module 16",type:"words"},
+{english:"outskirts, suburbs", spanish:"afueras (mp)",englishPhrase:"they live in the outskirts of the city", spanishPhrase:"viven en las afueras de la ciudad",module:"module 16",type:"words"},
+{english:"to evaluate, assess", spanish:"evaluar",englishPhrase:"they're going to evaluate the damage", spanishPhrase:"van a evaluar el daño",module:"module 16",type:"words"},
+{english:"columbian", spanish:"colombiano/a",englishPhrase:"they are all columbian", spanishPhrase:"todos son colombianos",module:"module 16",type:"words"},
+{english:"giant", spanish:"gigante",englishPhrase:"he made a giant mistake", spanishPhrase:"cometió un error gigante",module:"module 16",type:"words"},
+{english:"gratitude", spanish:"gratitud (f)",englishPhrase:"thank you for your gratitud", spanishPhrase:"gracias por tu gratitud",module:"module 16",type:"words"},
+{english:"devotion", spanish:"devoción (f)",englishPhrase:"love and devotion is all I feel", spanishPhrase:"amor y devoción es todo lo que siento",module:"module 16",type:"words"},
+{english:"punctual", spanish:"puntual ",englishPhrase:"to be punctual is important", spanishPhrase:"ser puntual es importante",module:"module 16",type:"words"},
+{english:"decent", spanish:"decente",englishPhrase:"it's a decent size", spanishPhrase:"es un tamaño decente",module:"module 16",type:"words"},
+{english:"documentation", spanish:"documentación (f)",englishPhrase:"where is the documentation for this?", spanishPhrase:"¿dónde está la documentación para esto?",module:"module 16",type:"words"},
+{english:"informative", spanish:"informativo/a",englishPhrase:"a very informative meeting", spanishPhrase:"una junta muy informativa",module:"module 16",type:"words"},
+{english:"bee", spanish:"abeja (f)",englishPhrase:"I'm allergic to bees", spanishPhrase:"so alérgico/a a las abejas",module:"module 16",type:"words"},
+{english:"to increase, enlarge", spanish:"ampliar",englishPhrase:"I want to increase my vocabulary", spanishPhrase:"quiero ampliar mi vocabulario",module:"module 16",type:"words"},
+{english:"telephone", spanish:"teléfono (m)",englishPhrase:"can I use your telephone please?", spanishPhrase:"¿puedo usar tu teléfono por favor?",module:"module 16",type:"words"},
+{english:"professor", spanish:"profesor/a",englishPhrase:"she's a professor of mathematics", spanishPhrase:"es profesora de matemáticas",module:"module 16",type:"words"},
+{english:"to open", spanish:"abrir",englishPhrase:"I can't open the lid", spanishPhrase:"no puedo abrir la tapa",module:"module 16",type:"words"},
+{english:"annoying", spanish:"molesto/a",englishPhrase:"an annoying noise", spanishPhrase:"un ruido molesto",module:"module 16",type:"words"},
+{english:"rather, quite", spanish:"bastante",englishPhrase:"it's quite annoying", spanishPhrase:"es bastante molesto",module:"module 16",type:"words"},
+{english:"forward, further", spanish:"adelante",englishPhrase:"it's further ahead", spanishPhrase:"es más adelante",module:"module 16",type:"words"},
+{english:"attitude", spanish:"actitud (f)",englishPhrase:"I don't like your attitude", spanishPhrase:"no me gusta tu actitud",module:"module 16",type:"words"},
+{english:"to weigh", spanish:"pesar",englishPhrase:"we should weigh it first", spanishPhrase:"deberíamos pesarlo primera",module:"module 16",type:"words"},
+{english:"perfect", spanish:"perfecto/a",englishPhrase:"a perfect day", spanishPhrase:"un dia perfecto",module:"module 16",type:"words"},
+{english:"armed", spanish:"armado/a",englishPhrase:"be careful, he's armed", spanishPhrase:"ten cuidada, está armado",module:"module 16",type:"words"},
+{english:"how", spanish:"cómo",englishPhrase:"I already know how to do it", spanishPhrase:"ya sé cómo hacerlo",module:"module 16",type:"words"},
+{english:"thirst", spanish:"sed (f)",englishPhrase:"I'm thirsty", spanishPhrase:"tengo sed",module:"module 16",type:"words"},
+{english:"used", spanish:"usado/a",englishPhrase:"I don't want to buy a used car", spanishPhrase:"no quiero comprar un coche usado",module:"module 16",type:"words"},
+{english:"saying, proverb", spanish:"dicho (m)",englishPhrase:"a famous saying", spanishPhrase:"un dicho famoso",module:"module 16",type:"words"},
+{english:"lead", spanish:"plomo (m)",englishPhrase:"it's heavy because it's made of lead", spanishPhrase:"está pesado porque está hecho de plomo",module:"module 16",type:"words"},
+{english:"silent", spanish:"silencioso/a",englishPhrase:"it's a silent killer", spanishPhrase:"es un asesino silencioso",module:"module 16",type:"words"},
+{english:"silence", spanish:"silencio (m)",englishPhrase:"I love the silence here", spanishPhrase:"me encanta el silencio aquí",module:"module 16",type:"words"},
+{english:"simple, plain", spanish:"sencillo/a",englishPhrase:"I like simple designs", spanishPhrase:"me gustan los diseños sencillos",module:"module 16",type:"words"},
+{english:"killer", spanish:"asesino/a",englishPhrase:"have they caught the killer?", spanishPhrase:"¿han capturado al asesino?",module:"module 16",type:"words"},
+{english:"intact", spanish:"intacto/a",englishPhrase:"everything is still intact after the storm", spanishPhrase:"todo sigue intacto después de la tormenta",module:"module 16",type:"words"},
+{english:"appropriate", spanish:"apropriado/a",englishPhrase:"it's important to choose the appropriate size", spanishPhrase:"es importante elegir el tamaño apropriado",module:"module 16",type:"words"},
+{english:"creative", spanish:"creativo/a",englishPhrase:"a creative solution", spanishPhrase:"una solución creativa",module:"module 16",type:"words"},
+{english:"nephew, niece", spanish:"sobrino/a",englishPhrase:"is she your niece?", spanishPhrase:"¿es tu sobrina?",module:"module 16",type:"words"},
+{english:"rumor", spanish:"rumor (m)",englishPhrase:"a nasty rumor", spanishPhrase:"un rumor feo",module:"module 16",type:"words"},
+{english:"golden, gold-platted", spanish:"dorado/a",englishPhrase:"a golden sunset", spanishPhrase:"un atardecer dorado",module:"module 16",type:"words"},
+{english:"crime", spanish:"delito (m)",englishPhrase:"it's a serious crime", spanishPhrase:"es un delito grave",module:"module 16",type:"words"},
+{english:"suffering", spanish:"sufrimiento (m)",englishPhrase:"I could feel her suffering", spanishPhrase:"podía sentir su sufrimiento",module:"module 16",type:"words"},
+{english:"turned off", spanish:"apagado/a",englishPhrase:"the light is turned off", spanishPhrase:"la luz está apagada",module:"module 16",type:"words"},
+{english:"to insult", spanish:"insultar",englishPhrase:"I don't want to insult her again", spanishPhrase:"no quiero insultarla otra vez",module:"module 16",type:"words"},
+{english:"insult", spanish:"insulto (m)",englishPhrase:"an insult to my intelligence", spanishPhrase:"un insulto a mi inteligencia",module:"module 16",type:"words"},
 {english:"", spanish:"",englishPhrase:"this part of the story is very interesting", spanishPhrase:"esta parte de la historia es muy interesante",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"i can't handle rejection", spanishPhrase:"no puedo manejar el rechazo",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the tank is full", spanishPhrase:"el tanque está lleno",module:"module 01",type:"phrases"},
@@ -1381,6 +1431,37 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"I hurt my hip", spanishPhrase:"me lastimé la cadera",module:"module 15",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"it's the last nail", spanishPhrase:"es el último clavo",module:"module 15",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"this time, no one is going to rescue you", spanishPhrase:"esta vez, nadie va a rescatarte",module:"module 15",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the killer was armed with a gun", spanishPhrase:"el asesino estaba armado con una pistola",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it was quite annoying", spanishPhrase:"era bastante molesto",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she has her telephone turned off", spanishPhrase:"ella tiene su teléfono apagado",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the cousin of my husband is columbian", spanishPhrase:"el primo de mi esposo es columbiano",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she is the professors niece", spanishPhrase:"ella es la sobrina del profesor",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he lives in the outskirts of the city where there's a lot of traffic", spanishPhrase:"vive en las afueras de la ciudad donde hay mucho tráfico",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the exchange between them was very informative", spanishPhrase:"el intercambio entre ellos fue muy informativo",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's a comedy for kids about a giant bee that cannot fly", spanishPhrase:"es una comedia para niños sobre una abeja gigante que no puede volar",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a strong vibration", spanishPhrase:"una fuerte vibración",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's just a rumor", spanishPhrase:"es sólo un rumor",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"where is the documentation?  they want to evaluate it", spanishPhrase:"¿dónde está la documentación?  Quieren evaluarlo",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's a serious crime", spanishPhrase:"es un delito grave",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he insulted me again yesterday", spanishPhrase:"me insultó otra vez ayer",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I see it further ahead, it's already open", spanishPhrase:"lo veo más adelante, ya está abierto",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a creative and intelligent boy", spanishPhrase:"un niño creativo e intelligente",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the lead version weighs more", spanishPhrase:"la version del plomo pesa más",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"is it new or used", spanishPhrase:"¿está nuevo o usado?",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it was still intact", spanishPhrase:"todavía estaba intacto",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's perfect for me", spanishPhrase:"es perfecto para mí",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"she received the gold medal", spanishPhrase:"recibió la medalla dorada",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he was quite thirsty", spanishPhrase:"tenía bastante sed",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"everyone was silent in that moment", spanishPhrase:"todos el mundo estuvo silencioso en ese momento",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the suffering was too much for her", spanishPhrase:"el sufrimiento era demasiado para ella",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"there's a saying that says silence is golden", spanishPhrase:"hay un dicho que dice que el silencio es oro ",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"how can I remain neutral in this situation?", spanishPhrase:"¿cómo puedo mantenerme neutral en esta situación?",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"we all want to increase our vocabulary", spanishPhrase:"todos queremos ampliar nuestro vocabulario",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"would it be appropriate to call her now?", spanishPhrase:"¿sería apropiado llamarle ahora?",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"to be professional, one must always be punctual", spanishPhrase:"para ser profesional, siempre hay que ser puntual ",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's a story about devotion and modern love", spanishPhrase:"es una historia sobre la devoción y el amor moderno",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's a decent amount of money", spanishPhrase:"es una candidad decente de dinero",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he has an attitude of gratitude", spanishPhrase:"tiene una actitud de gratitud",module:"module 16",type:"phrases"},
     ],
     }
     }
