--- a/SpanishVocabulary.html
+++ b/SpanishVocabulary.html
@@ -856,7 +856,7 @@ SELECT {
 {english:"cable", spanish:"cable (m)",englishPhrase:"the cable is missing", spanishPhrase:"falta el cable",module:"module 13",type:"words"},
 {english:"lion", spanish:"león (m)",englishPhrase:"i've only seen a lion in the zoo", spanishPhrase:"solo he visto un león en el zoológico",module:"module 13",type:"words"},
 {english:"favorite", spanish:"favorito/a",englishPhrase:"that's my favorite", spanishPhrase:"ese es mi favorito",module:"module 13",type:"words"},
-{english:"to step on", spanish:"pisar",englishPhrase:"he stepped on my toe", spanishPhrase:"me pisó el ded del pie",module:"module 13",type:"words"},
+{english:"to step on", spanish:"pisar",englishPhrase:"he stepped on my toe", spanishPhrase:"me pisó el dedo del pie",module:"module 13",type:"words"},
 {english:"adult", spanish:"adulto (m)",englishPhrase:"it's only for adults", spanishPhrase:"es sólo para adultos",module:"module 13",type:"words"},
 {english:"confused", spanish:"confundido/a",englishPhrase:"i'm confused, aren't you?", spanishPhrase:"estoy confundido/a ¿tú no?",module:"module 13",type:"words"},
 {english:"synthetic", spanish:"sintético/a",englishPhrase:"it's a synthetic material", spanishPhrase:"es un material sintético",module:"module 13",type:"words"},
@@ -890,7 +890,7 @@ SELECT {
 {english:"rescue, ransom", spanish:"rescate (m)",englishPhrase:"the rescue was successfull", spanishPhrase:"el rescate tuvo éxito",module:"module 14",type:"words"},
 {english:"frozen", spanish:"congelado/a",englishPhrase:"the meat is still frozen", spanishPhrase:"la carne está congelada todavia",module:"module 14",type:"words"},
 {english:"sense, feeling", spanish:"sentimiento (m)",englishPhrase:"there's a feeling of happiness in the house", spanishPhrase:"hay un sentimiento de felicidad en la casa",module:"module 14",type:"words"},
-{english:"urgency", spanish:"urgencia",englishPhrase:"thiey did it with a sense of urgency", spanishPhrase:"lo hicieron con un sentimiento de urgencia",module:"module 14",type:"words"},
+{english:"urgency", spanish:"urgencia",englishPhrase:"they did it with a sense of urgency", spanishPhrase:"lo hicieron con un sentimiento de urgencia",module:"module 14",type:"words"},
 {english:"happiness", spanish:"felicidad (f)",englishPhrase:"happiness is very important to me", spanishPhrase:"la felicidad es muy importante para mi",module:"module 14",type:"words"},
 {english:"factor", spanish:"factor (m)",englishPhrase:"there are many factors involved", spanishPhrase:"hay muchos factores involucrados",module:"module 14",type:"words"},
 {english:"involved", spanish:"involucrado/a",englishPhrase:"i think he was involved in the robbery", spanishPhrase:"creo que estuvo involucrado en el robo",module:"module 14",type:"words"},
@@ -1022,6 +1022,56 @@ SELECT {
 {english:"turned off", spanish:"apagado/a",englishPhrase:"the light is turned off", spanishPhrase:"la luz está apagada",module:"module 16",type:"words"},
 {english:"to insult", spanish:"insultar",englishPhrase:"I don't want to insult her again", spanishPhrase:"no quiero insultarla otra vez",module:"module 16",type:"words"},
 {english:"insult", spanish:"insulto (m)",englishPhrase:"an insult to my intelligence", spanishPhrase:"un insulto a mi inteligencia",module:"module 16",type:"words"},
+{english:"chair", spanish:"silla (f)",englishPhrase:"four chairs around a table", spanishPhrase:"cuatro sillas alrededor de una mesa",module:"module 17",type:"words"},
+{english:"armchair", spanish:"sillón (m)",englishPhrase:"an armchair by the tv", spanishPhrase:"un sillón al lado de la tele",module:"module 17",type:"words"},
+{english:"to surprise", spanish:"sorprender",englishPhrase:"they want to surprise her", spanishPhrase:"quieren sorprenderla",module:"module 17",type:"words"},
+{english:"island", spanish:"isla (f)",englishPhrase:"an island in the caribbean", spanishPhrase:"una isla en el caribe",module:"module 17",type:"words"},
+{english:"exterior", spanish:"exterior (m)",englishPhrase:"they're going to paint the exterior of the building", spanishPhrase:"van a pintar el exterior del edificio",module:"module 17",type:"words"},
+{english:"to marry", spanish:"casarse",englishPhrase:"they got married yesterday", spanishPhrase:"se casaron ayer",module:"module 17",type:"words"},
+{english:"obligation", spanish:"obligación (f)",englishPhrase:"I have many obligations", spanishPhrase:"tengo muchas obligaciónes",module:"module 17",type:"words"},
+{english:"home", spanish:"hogar (m)",englishPhrase:"I love my home", spanishPhrase:"amo mi hogar",module:"module 17",type:"words"},
+{english:"tree", spanish:"árbol (m)",englishPhrase:"a tree gives you shade", spanishPhrase:"un árbol te da sombra",module:"module 17",type:"words"},
+{english:"finally, at last", spanish:"finalmente",englishPhrase:"at last it's here", spanishPhrase:"¡finalmente está aquí!",module:"module 17",type:"words"},
+{english:"product", spanish:"producto (m)",englishPhrase:"a wonderful product", spanishPhrase:"un producto maravilloso",module:"module 17",type:"words"},
+{english:"to behave", spanish:"comportarse",englishPhrase:"she behaved herself well", spanishPhrase:"se comportó bien",module:"module 17",type:"words"},
+{english:"to copy", spanish:"copiar",englishPhrase:"they tried to copy my work", spanishPhrase:"trataron de copiar mi trabajo",module:"module 17",type:"words"},
+{english:"screen", spanish:"pantalla (f)",englishPhrase:"the screen is 50 inches", spanishPhrase:"la pantalla es de cincuenta pulgadas",module:"module 17",type:"words"},
+{english:"locked", spanish:"encerrado/a",englishPhrase:"she's locked in the bathroom", spanishPhrase:"está encerrada en el baño",module:"module 17",type:"words"},
+{english:"variation", spanish:"variación (f)",englishPhrase:"there are three variations", spanishPhrase:"hay tres variaciones",module:"module 17",type:"words"},
+{english:"wallet ", spanish:"cartera (f)",englishPhrase:"I lost my wallet", spanishPhrase:"perdí mi cartera",module:"module 17",type:"words"},
+{english:"herb", spanish:"hierba (f)",englishPhrase:"I love cooking with herbs", spanishPhrase:"me encanta cocinar con hierbas",module:"module 17",type:"words"},
+{english:"piece, a bit of", spanish:"pedazo, pedacito (m)",englishPhrase:"just a little piece", spanishPhrase:"solo un pedacito",module:"module 17",type:"words"},
+{english:"identification", spanish:"identificación (f)",englishPhrase:"he doesn't have id", spanishPhrase:"no tiene identificación",module:"module 17",type:"words"},
+{english:"knife", spanish:"cuchillo (m)",englishPhrase:"a very sharp knife", spanishPhrase:"un cuchillo muy filoso",module:"module 17",type:"words"},
+{english:"plastic", spanish:"plástico/a",englishPhrase:"the handle is made of plastic", spanishPhrase:"el mango es de plástico",module:"module 17",type:"words"},
+{english:"automatic", spanish:"automático/a",englishPhrase:"it's automatic", spanishPhrase:"es automático/a",module:"module 17",type:"words"},
+{english:"automatically", spanish:"automáticamente",englishPhrase:"it happens automatically", spanishPhrase:"sucede automáticamente",module:"module 17",type:"words"},
+{english:"fantastic", spanish:"fantástico/a",englishPhrase:"the party was fantastic last night", spanishPhrase:"la fiesta fue fantástica anoche",module:"module 17",type:"words"},
+{english:"snow", spanish:"nieve (f)",englishPhrase:"the ground is covered in snow", spanishPhrase:"la tierra está cubierta de nieve",module:"module 17",type:"words"},
+{english:"block", spanish:"bloque (m)",englishPhrase:"a block of cement", spanishPhrase:"un bloque de cemento",module:"module 17",type:"words"},
+{english:"option, choice", spanish:"opción (f)",englishPhrase:"there's no other choice", spanishPhrase:"no hay otra opción",module:"module 17",type:"words"},
+{english:"vote", spanish:"voto (m)",englishPhrase:"your vote is your right", spanishPhrase:"tu voto es tu derecho",module:"module 17",type:"words"},
+{english:"to shoot, to shoot at", spanish:"disparar",englishPhrase:"they shot at him", spanishPhrase:"le dispararon a él",module:"module 17",type:"words"},
+{english:"to focus", spanish:"enfocar, enfocarse",englishPhrase:"we should focus on the problem", spanishPhrase:"nos deberíamos enfocar en el problema",module:"module 17",type:"words"},
+{english:"operation", spanish:"operación (f)",englishPhrase:"the operation is this afternoon", spanishPhrase:"la operación es en la tarde",module:"module 17",type:"words"},
+{english:"sensation", spanish:"sensación (f)",englishPhrase:"a strange sensation", spanishPhrase:"una sensación rara",module:"module 17",type:"words"},
+{english:"to adapt", spanish:"adaptar",englishPhrase:"we must adapt to the situation", spanishPhrase:"tenemos que adaptarnos a la situación",module:"module 17",type:"words"},
+{english:"photo", spanish:"foto (f)",englishPhrase:"can you take a photo for me?", spanishPhrase:"¿me puedes tomar una foto?",module:"module 17",type:"words"},
+{english:"to choose", spanish:"elegir, escoger",englishPhrase:"you need to choose a dress", spanishPhrase:"necesitas escoger un vestido",module:"module 17",type:"words"},
+{english:"legal", spanish:"legal",englishPhrase:"it's a legal document", spanishPhrase:"es un documento legal",module:"module 17",type:"words"},
+{english:"illegal", spanish:"ilegal",englishPhrase:"it's an illegal activity", spanishPhrase:"es una actividad ilegal",module:"module 17",type:"words"},
+{english:"to train", spanish:"entrenar",englishPhrase:"it's important to train your dog", spanishPhrase:"es importante entrenar a su perro",module:"module 17",type:"words"},
+{english:"bug, insect", spanish:"bicho (m)",englishPhrase:"there are bugs in the bed!", spanishPhrase:"¡hay bichos en la cama!",module:"module 17",type:"words"},
+{english:"electricity", spanish:"electricidad, luz (f)",englishPhrase:"there's no electricity", spanishPhrase:"no hay electricidad, no hay luz",module:"module 17",type:"words"},
+{english:"belt", spanish:"cinturón (m)",englishPhrase:"put your seatbelt on", spanishPhrase:"pon tu cinturón de seguridad",module:"module 17",type:"words"},
+{english:"vocabulary", spanish:"vocabulario (m)",englishPhrase:"she has a large vocabulary in spanish", spanishPhrase:"tiene un vocabulario amplio en español",module:"module 17",type:"words"},
+{english:"tight", spanish:"apretado/a",englishPhrase:"the belt is too tight", spanishPhrase:"el cinturón está demasiado apretado",module:"module 17",type:"words"},
+{english:"rest, break", spanish:"descanso (m)",englishPhrase:"he's going to take a break", spanishPhrase:"va a tomar un descanso",module:"module 17",type:"words"},
+{english:"school", spanish:"escuela (f)",englishPhrase:"all the schools are good here", spanishPhrase:"todas las escuelas son buenas aquí",module:"module 17",type:"words"},
+{english:"real", spanish:"real",englishPhrase:"it can't be real", spanishPhrase:"no puede ser real",module:"module 17",type:"words"},
+{english:"activity", spanish:"actividad (f)",englishPhrase:"there are lots of activities to do", spanishPhrase:"hay muchas actividades que hacer",module:"module 17",type:"words"},
+{english:"to print", spanish:"imprimir",englishPhrase:"did you print the tickets", spanishPhrase:"¿imprimiste los boletos?",module:"module 17",type:"words"},
+{english:"mess", spanish:"desorden (m)",englishPhrase:"what a mess you have made", spanishPhrase:"que desorden que has hecho",module:"module 17",type:"words"},
 {english:"", spanish:"",englishPhrase:"this part of the story is very interesting", spanishPhrase:"esta parte de la historia es muy interesante",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"i can't handle rejection", spanishPhrase:"no puedo manejar el rechazo",module:"module 01",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"the tank is full", spanishPhrase:"el tanque está lleno",module:"module 01",type:"phrases"},
@@ -1462,6 +1512,33 @@ SELECT {
 {english:"", spanish:"",englishPhrase:"it's a story about devotion and modern love", spanishPhrase:"es una historia sobre la devoción y el amor moderno",module:"module 16",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"it's a decent amount of money", spanishPhrase:"es una candidad decente de dinero",module:"module 16",type:"phrases"},
 {english:"", spanish:"",englishPhrase:"he has an attitude of gratitude", spanishPhrase:"tiene una actitud de gratitud",module:"module 16",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it has the option of firing automatically", spanishPhrase:"tiene la opción de disparar automáticamente",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the identification is in his wallet", spanishPhrase:"la identificación está en su cartera",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they're going to train at the school this morning", spanishPhrase:"van a entrenar a la escuala esta tarde",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they are fantastic trees because they give you shade", spanishPhrase:"son árboles fantástico porque te dan sombra",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the island doesn't have electricity", spanishPhrase:"la isla no tiene electricidad",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's a plastic knife", spanishPhrase:"es un cuchillo de plástico",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the snow in the photo isn't real", spanishPhrase:"la nieve en la foto no es real",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"an insect bit me while I was sitting in the chair", spanishPhrase:"un bicho me mordió mientras estaba sentado en la silla",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"finally, they decided to marry", spanishPhrase:"finalmente, se decidieron casarse",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"did you print all the vocabulary for today's lessong", spanishPhrase:"¿imprimiste todo el vocabulario para la lección hoy?",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the belt was very tight", spanishPhrase:"el cinturón estaba muy apretado",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's illegal to copy their products", spanishPhrase:"es ilegal copiar sus productos",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"a peaceful home", spanishPhrase:"un hogar tranquillo",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"what a mess!", spanishPhrase:"¡qu¡ desorden!",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the children refused to behave during the activity", spanishPhrase:"los niños se negaron a comportarse durante la actividad",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"he broke the screen with a block of wood", spanishPhrase:"rompió la pantalla con un bloque de madera",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they are counting the votes to elect the next president", spanishPhrase:"están contando los votos para elegir al próximo presidente",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"they have the legal obligation to assist you", spanishPhrase:"tienen la obligación legal de asistirte",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I need a break", spanishPhrase:"necesito un descanso",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"you can see it on the exterior of the building", spanishPhrase:"puedes verlo en el exterior del edificio",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"all you need for the sauce is just a little bit of that herb", spanishPhrase:"todo lo que necesitas para la salsa es un pedacito de esa hierba",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the sensation of being locked up", spanishPhrase:"la sensación de estar encerrado",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"you are going to surprise him with your ability to adapt", spanishPhrase:"vas a sorprenderlo con tu capacidad de adaptarte",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"the operation was imposible without electricity", spanishPhrase:"la operación fue imposible sin electricidad",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"it's an automatic door", spanishPhrase:"es una puerta automática",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"I try to focus on what's important", spanishPhrase:"trato de enfocarme en lo que es importante",module:"module 17",type:"phrases"},
+{english:"", spanish:"",englishPhrase:"there are a lot of variations", spanishPhrase:"hay muchas variaciónes",module:"module 17",type:"phrases"},
     ],
     }
     }
